logs/continuous-services.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/continuous_services'...
Listing './lib/python3.5/site-packages/continuous_services/services'...
Listing './lib/python3.5/site-packages/continuous_services/services/email'...
Listing './lib/python3.5/site-packages/continuous_services/services/jabber'...
Compiling './lib/python3.5/site-packages/continuous_services/services/jabber/utilities.py'...
***   File "./lib/python3.5/site-packages/continuous_services/services/jabber/utilities.py", line 13
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/continuous_services/services/skeleton'...
Listing './lib/python3.5/site-packages/continuous_services-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xmpp'...
Compiling './lib/python3.5/site-packages/xmpp/auth.py'...
***   File "./lib/python3.5/site-packages/xmpp/auth.py", line 157
    if challenge.getNamespace()<>NS_SASL: return
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/browser.py'...
***   File "./lib/python3.5/site-packages/xmpp/browser.py", line 115
    if i<>'' and cur.has_key(i): cur=cur[i]
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/client.py'...
***   File "./lib/python3.5/site-packages/xmpp/client.py", line 105
    if debug and type(debug)<>list: debug=['always', 'nodebuilder']
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/commands.py'...
***   File "./lib/python3.5/site-packages/xmpp/commands.py", line 140
    raise NameError,'Command Exists'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/debug.py'...
***   File "./lib/python3.5/site-packages/xmpp/debug.py", line 180
    print 'ERROR: can open %s for writing'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xmpp/dispatcher.py'...
***   File "./lib/python3.5/site-packages/xmpp/dispatcher.py", line 103
    if ns<>NS_STREAMS or tag<>'stream':
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/features.py'...
***   File "./lib/python3.5/site-packages/xmpp/features.py", line 102
    if type(i)<>type(iq): pass
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/filetransfer.py'...
***   File "./lib/python3.5/site-packages/xmpp/filetransfer.py", line 150
    elif seq<>stream['seq']: err=ERR_UNEXPECTED_REQUEST
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/jep0106.py'...
***   File "./lib/python3.5/site-packages/xmpp/jep0106.py", line 43
    print 'PASS Before: ' + before
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xmpp/protocol.py'...
***   File "./lib/python3.5/site-packages/xmpp/protocol.py", line 384
    if tag.getName()<>'text': return tag.getName()
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/session.py'...
***   File "./lib/python3.5/site-packages/xmpp/session.py", line 88
    if self.TYP=='server': self.ID=`random.random()`[2:]
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/simplexml.py'...
***   File "./lib/python3.5/site-packages/xmpp/simplexml.py", line 386
    self.DEBUG(DBG_NODEBUILDER, "DEPTH -> %i , tag -> %s, attrs -> %s" % (self.__depth, tag, `attrs`), 'down')
                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xmpp/transports.py'...
***   File "./lib/python3.5/site-packages/xmpp/transports.py", line 136
    self.DEBUG("Successfully connected to remote host %s"%`server`,'start')
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xmpppy-0.5.0rc1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
